add stories, add loki

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
-.app.dark {
-  --bg-color: rgb(106, 103, 113);
-  --inverted-bg-color: rgb(255, 255, 255);
-
-  --primary-color: rgb(180, 180, 180);
-  --secondary-color: rgb(227, 227, 227);
-  --inverted-primary-color: rgb(0, 0, 0);
-  --inverted-secondary-color: rgb(59, 59, 59);
+.dark {
+  --bg-color: #090949;
+  --inverted-bg-color: #e8e8ea;
+  --primary-color: #049604;
+  --secondary-color: #04ff04;
+  --inverted-primary-color: #0232c2;
+  --inverted-secondary-color: #0452ff;
 }
