--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,9 +1,8 @@
-.app.light {
-  --bg-color: rgb(255, 255, 255);
-  --inverted-bg-color: rgb(106, 103, 113);
-
-  --primary-color: rgb(0, 0, 0);
-  --secondary-color: rgb(59, 59, 59);
-  --inverted-primary-color: rgb(180, 180, 180);
-  --inverted-secondary-color: rgb(227, 227, 227);
+:root {
+  --bg-color: #e8e8ea;
+  --inverted-bg-color: #090949;
+  --primary-color: #0232c2;
+  --secondary-color: #0449e0;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04;
 }
