--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -1,4 +1,5 @@
 .button {
+  padding: 6px 15px;
   color: var(--primary-color);
   cursor: pointer;
 }
@@ -11,8 +12,51 @@
 }
 
 .outline {
-  padding: 10px 15px;
   color: var(--primary-color);
   background: none;
   border: 1px solid var(--primary-color);
+}
+
+.background {
+  color: var(--primary-color);
+  background: var(--bg-color);
+  border: none;
+}
+
+.backgroundInverted {
+  color: var(--inverted-primary-color);
+  background: var(--inverted-bg-color);
+  border: none;
+}
+
+.square {
+  padding: 0;
+}
+
+.square.size-m {
+  width: var(--font-line-m);
+  height:  var(--font-line-m);
+  font: var(--font-m);
+}
+
+.square.size-l {
+  width: var(--font-line-l);
+  height:  var(--font-line-l);
+  font: var(--font-l);
+}
+
+.square.size-xl {
+  width: var(--font-line-xl);
+  height:  var(--font-line-xl);
+  font: var(--font-xl);
+}
+
+.size-m {
+  font: var(--font-m);
+}
+.size-l {
+  font: var(--font-l);
+}
+.size-xl {
+  font: var(--font-xl);
 }
