--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 
 :root {
-  --font-family-main: Roboto, Arial, Sans-Serif;
+  // --font-family-main: Roboto, Arial, Sans-Serif;
+  --font-family-main: Arial, Sans-Serif;
 
   --font-size-m: 16px;
   --font-line-m: 24px;
